--- a/files/fireboom.hooks.ts.hbs
+++ b/files/fireboom.hooks.ts.hbs
@@ -1,4 +1,4 @@
-import type { BaseRequestContext, WunderGraphRequest, WunderGraphResponse, AuthenticationResponse, AuthenticationHookRequest, HooksConfiguration, WsTransportOnConnectionInitResponse } from "fireboom-wundersdk/server";
+import type { BaseRequestContext, WunderGraphRequest, WunderGraphResponse, AuthenticationResponse, AuthenticationHookRequest, HooksConfiguration, WsTransportOnConnectionInitResponse, PreUploadHookRequest, PreUploadHookResponse, PostUploadHookRequest, PostUploadHookResponse } from "fireboom-wundersdk/server";
 import { {{ hooksModelImports }} } from "./models"
 import type { InternalClient } from "./fireboom.internal.client"
 import type { User } from "./fireboom.server"
@@ -99,8 +99,7 @@ export interface HookRequestWithInput<Input> extends HookRequest {
 		input: Input;
 }
 
-// @ts-ignore
-export interface HooksConfig extends HooksConfiguration<Queries, Mutations, Subscriptions, User, InternalClient> {
+export interface HooksConfig extends HooksConfiguration<Queries, Mutations, Subscriptions, Uploads, User, InternalClient> {
     global?: GlobalHooksConfig;
     authentication?: {
         postAuthentication?: (hook: AuthenticationHookRequest<User, InternalClient>) => Promise<void>;
@@ -109,14 +108,17 @@ export interface HooksConfig extends HooksConfiguration<Queries, Mutations, Subs
         postLogout?: (hook: AuthenticationHookRequest<User, InternalClient>) => Promise<void>;
     };
 		{{#if hasQueries}}
-				queries?: Queries,
+				queries?: Queries;
 		{{/if}}
 		{{#if hasMutations}}
-				mutations?: Mutations
+				mutations?: Mutations;
 		{{/if}}
 		{{#if hasSubscriptions}}
-				subscriptions?: Subscriptions
+				subscriptions?: Subscriptions;
 		{{/if}}
+        {{#if hasUploadProviders}}
+                uploads?: Uploads;
+        {{/if}}
 }
 
 export interface Queries {
@@ -127,7 +129,7 @@ export interface Queries {
         preResolve?: (hook: {{#if hasInternalInput}}HookRequestWithInput<Injected{{operationName}}Input>{{else}}HookRequest{{/if}}) => Promise<void>;
         {{#if hasInternalInput}} mutatingPreResolve?: (hook: {{#if hasInternalInput}}HookRequestWithInput<Injected{{operationName}}Input>{{else}}HookRequest{{/if}}) => Promise<Injected{{operationName}}Input>;{{/if}}
         postResolve?: (hook: {{#if hasInternalInput}}HookRequestWithInput<Injected{{operationName}}Input>{{else}}HookRequest{{/if}} & HookRequestWithResponse<{{operationName}}Response>) => Promise<void>;
-        customResolve?: (hook: {{#if hasInternalInput}}HookRequestWithInput<Injected{{operationName}}Input>{{else}}HookRequest{{/if}}) => Promise<void | {{operationName}}Response>;
+        customResolve?: (hook: {{#if hasInternalInput}}HookRequestWithInput<Injected{{operationName}}Input>{{else}}HookRequest{{/if}}) => Promise<void | {{operationName}}Response | null>;
         mutatingPostResolve?: (hook: {{#if hasInternalInput}}HookRequestWithInput<Injected{{operationName}}Input>{{else}}HookRequest{{/if}} & HookRequestWithResponse<{{operationName}}Response>) => Promise<{{operationName}}Response>;
         }
     {{/each}}
@@ -160,4 +162,17 @@ export interface Subscriptions {
         }
 		{{/each}}
 {{/if}}
+}
+
+export interface Uploads {
+    {{#each uploadProviders}}
+        {{name}}?: {
+            {{#each uploadProfiles}}
+                {{@key}}?: {
+                    preUpload?: (hook: PreUploadHookRequest<User>) => PreUploadHookResponse;
+                    postUpload?: (hook: PostUploadHookRequest<User, InternalClient>) => PostUploadHookResponse;
+                }
+            {{/each}}
+        }
+    {{/each}}
 }
