--- a/files/fireboom.server.ts.hbs
+++ b/files/fireboom.server.ts.hbs
@@ -26,7 +26,7 @@ import {{replaceSpecial operationName "$"}}_{{hookName}} from '{{tsPath}}';
 {{/each}}
 {{#each dataSources}}
     {{#if isCustomized}}
-import {{replaceSpecial apiNameSpace "_"}} from './customize/{{apiNameSpace}}';
+import {{apiNameSpace}} from './customize/{{apiNameSpace}}';
     {{/if}}
 {{/each}}
 
@@ -53,7 +53,7 @@ export default configureWunderGraphServer<HooksConfig, InternalClient, {}>(() =>
     {{#equalAny hookType "Queries,Mutations"}}
         {{#each hookConf as |operationConf operationName|}}
             {{#each operationConf.tsPathMap as |tsPath hookName|}}
-            "{{operationName}}": {
+            {{replaceSpecial operationName "$"}}: {
                 {{hookName}}: {{replaceSpecial operationName "$"}}_{{hookName}},
             },
             {{/each}}
@@ -69,7 +69,7 @@ export default configureWunderGraphServer<HooksConfig, InternalClient, {}>(() =>
             apiNamespace: "{{apiNameSpace}}",
             serverName: "{{apiNameSpace}}",
             enableGraphQLEndpoint: true,
-            schema: {{replaceSpecial apiNameSpace "_"}}
+            schema: {{apiNameSpace}}
         },
     {{/if}}
 {{/each}}
