--- a/partials/operation_partial.hbs
+++ b/partials/operation_partial.hbs
@@ -6,7 +6,7 @@
             ,Internal{{name}}Input
         {{~/if~}}
     {{~/if~}}
-    {{~#if hasInjected~}}
+    {{~#if hasInternalInput~}}
         {{~#if includeInternal~}}
             ,Injected{{name}}Input
         {{~/if~}}
