--- a/partials/operation_partial.hbs
+++ b/partials/operation_partial.hbs
@@ -6,8 +6,8 @@
             ,Internal{{name}}Input
         {{~/if~}}
     {{~/if~}}
-    {{~#if hasInternalInput~}}
-        {{~#if includeInternal~}}
+    {{~#if HasInjectedInput~}}
+        {{~#if includeInject~}}
             ,Injected{{name}}Input
         {{~/if~}}
     {{~/if~}}
