fix: fix template

--- a/partials/operation_partial.hbs
+++ b/partials/operation_partial.hbs
@@ -2,11 +2,13 @@
     {{~name}}Response
     {{~#if hasInput~}}
         ,{{name}}Input
+    {{~/if~}}
+    {{~#if hasInternalInput~}}
         {{~#if includeInternal~}}
             ,Internal{{name}}Input
         {{~/if~}}
     {{~/if~}}
-    {{~#if HasInjectedInput~}}
+    {{~#if hasInjectedInput~}}
         {{~#if includeInject~}}
             ,Injected{{name}}Input
         {{~/if~}}
