--- a/partials/operation_partial.hbs
+++ b/partials/operation_partial.hbs
@@ -1,20 +1,26 @@
 {{#each operations~}}
-    {{~name}}Response
     {{~#if hasInput~}}
-        ,{{name}}Input
+        {{name}}Input,
     {{~/if~}}
     {{~#if hasInternalInput~}}
         {{~#if includeInternal~}}
-            ,Internal{{name}}Input
+            Internal{{name}}Input,
         {{~/if~}}
     {{~/if~}}
-    {{~#if hasInjectedInput~}}
-        {{~#if includeInject~}}
-            ,Injected{{name}}Input
+    {{~#equal engine 0}}
+        {{~#if hasInjectedInput~}}
+            {{~#if includeInject~}}
+                Injected{{name}}Input,
+            {{~/if~}}
         {{~/if~}}
-    {{~/if~}}
+    {{~/equal~}}
+    {{~name}}Response,
     {{~#if includeResponseData~}}
-        ,{{name}}ResponseData
+        {{~#if (isNotEmpty responseSchema)}}
+            {{name}}ResponseData,
+        {{~/if~}}
+        {{~#equal engine 1~}}
+            {{name}}ResponseData,
+        {{~/equal~}}
     {{~/if~}}
-    {{#unless @last}},{{/unless}}
 {{~/each}}
