feat: remove unused

--- a/files/fireboom.server.ts.hbs
+++ b/files/fireboom.server.ts.hbs
@@ -1,5 +1,4 @@
-import { GraphQLObjectType, GraphQLSchema, GraphQLString } from 'graphql';
-import { configureWunderGraphServer, type AuthenticationResponse } from 'fireboom-wundersdk/server';
+import { configureWunderGraphServer } from 'fireboom-wundersdk/server';
 import type { HooksConfig } from './generated/fireboom.hooks';
 import type { InternalClient } from './generated/fireboom.internal.client';
 
